# cscg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.codex/: AGENTS.md
.github/workflows/: pre-commit.yml
conda/: env.yml
cscg/: __init__.py  datagen.py  inference.py  learning.py  model.py  utils.py
notebooks/: Fig_2g.ipynb  ext_data_fig_8_a_Transition_graph.ipynb  ext_data_fig_8_b.ipynb  ext_data_fig_8_d.ipynb  intro.ipynb
